[package]
name = "clever_fox_rust_edition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "model",
    "rustls_backend"], version = "0.11.2"}
tokio = "1.19.2"
