[package]
name = "clever_fox_rust_edition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = [ "builder", "client", "gateway", "rustls_backend", "http", "utils", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
